// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/AboutBuildModal should match snapshot for enterprise edition 1`] = `
<Modal
  animation={true}
  autoFocus={true}
  backdrop={true}
  bsClass="modal"
  dialogClassName="about-modal"
  dialogComponentClass={[Function]}
  enforceFocus={true}
  keyboard={true}
  manager={
    ModalManager {
      "add": [Function],
      "containers": Array [],
      "data": Array [],
      "handleContainerOverflow": true,
      "hideSiblingNodes": true,
      "isTopModal": [Function],
      "modals": Array [],
      "remove": [Function],
    }
  }
  onHide={[Function]}
  renderBackdrop={[Function]}
  restoreFocus={true}
  show={true}
>
  <ModalHeader
    bsClass="modal-header"
    closeButton={true}
    closeLabel="Close"
  >
    <ModalTitle
      bsClass="modal-title"
      componentClass="h4"
    >
      <FormattedMessage
        defaultMessage="About uChat"
        id="about.title"
        values={Object {}}
      />
    </ModalTitle>
  </ModalHeader>
  <ModalBody
    bsClass="modal-body"
    componentClass="div"
  >
    <div
      className="about-modal__content"
    >
      <div
        className="about-modal__logo"
      >
        <span
          className="icon"
          dangerouslySetInnerHTML={
            Object {
              "__html": "<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 500 487'><title>uChat</title><path class='uchat-bubble-color' fill='#8ed0bc' d='M433.06,0H63.75A63.8,63.8,0,0,0,0,63.85L2.31,320.7a63.8,63.8,0,0,0,63.75,63.85H377.24l97.59,97.74a14.23,14.23,0,0,0,24.29-10.08V384.55L500,63.85C500,28.59,468.27,0,433.06,0Z'/><path class='uchat-letter-color' fill='#fff' d='M315.2,80.76V213.07c0,44.18-19.49,62.53-65.2,62.53s-65.2-18.35-65.2-62.53V75h-44Q135,75,135,80.76V215.24C135,289.13,181.91,315,250,315s115-25.83,115-99.72V75H321Q315.2,75,315.2,80.76Z'/></svg>",
            }
          }
        />
      </div>
      <div>
        <h3
          className="about-modal__title"
        >
          uChat

          <FormattedMessage
            defaultMessage="Enterprise Edition"
            id="about.teamEditiont1"
            values={Object {}}
          />
        </h3>
        <p
          className="about-modal__subtitle padding-bottom"
        >
          <FormattedMessage
            defaultMessage="Modern communication from behind your firewall."
            id="about.enterpriseEditionSt"
            values={Object {}}
          />
        </p>
        <div
          className="form-group less"
        >
          <div>
            <FormattedMessage
              defaultMessage="Version:"
              id="about.version"
              values={Object {}}
            />
            <span
              id="versionString"
            >
               3.6.0  (3.6.2)
            </span>
          </div>
          <div>
            <FormattedMessage
              defaultMessage="Database:"
              id="about.database"
              values={Object {}}
            />
             Postgres
          </div>
        </div>
      </div>
    </div>
    <div
      className="about-modal__footer"
    >
      <div>
        <FormattedMessage
          defaultMessage="Learn more at "
          id="about.enterpriseEditionLearn"
          values={Object {}}
        />
        <a
          href="https://uchat.uberinternal.com/downloads"
          rel="noopener noreferrer"
          target="_blank"
        >
          uchat.uberinternal.com
        </a>
      </div>
      <div
        className="form-group about-modal__copyright"
      >
        <FormattedMessage
          defaultMessage="Copyright 2015 - {currentYear}, Uber Technologies, Inc. All rights reserved"
          id="about.copyright"
          values={
            Object {
              "currentYear": 2017,
            }
          }
        />
      </div>
    </div>
    <div
      className="about-modal__notice form-group padding-top x2"
    >
      <p>
        <FormattedHTMLMessage
          defaultMessage="Mattermost is made possible by the open source software used in our <a href=\\"https://about.mattermost.com/platform-notice-txt/\\" target=\\"_blank\\">platform</a>, <a href=\\"https://about.mattermost.com/desktop-notice-txt/\\" target=\\"_blank\\">desktop</a> and <a href=\\"https://about.mattermost.com/mobile-notice-txt/\\" target=\\"_blank\\">mobile</a> apps."
          id="about.notice"
          values={Object {}}
        />
      </p>
    </div>
    <div
      className="about-modal__hash"
    >
      <p>
        <FormattedMessage
          defaultMessage="Build Hash:"
          id="about.hash"
          values={Object {}}
        />
         
        abcdef1234567890
        <br />
        <FormattedMessage
          defaultMessage="EE Build Hash:"
          id="about.hashee"
          values={Object {}}
        />
         
        0123456789abcdef
      </p>
      <p>
        <FormattedMessage
          defaultMessage="Build Date:"
          id="about.date"
          values={Object {}}
        />
         
        21 January 2017
      </p>
    </div>
  </ModalBody>
</Modal>
`;

exports[`components/AboutBuildModal should match snapshot for team edition 1`] = `
<Modal
  animation={true}
  autoFocus={true}
  backdrop={true}
  bsClass="modal"
  dialogClassName="about-modal"
  dialogComponentClass={[Function]}
  enforceFocus={true}
  keyboard={true}
  manager={
    ModalManager {
      "add": [Function],
      "containers": Array [],
      "data": Array [],
      "handleContainerOverflow": true,
      "hideSiblingNodes": true,
      "isTopModal": [Function],
      "modals": Array [],
      "remove": [Function],
    }
  }
  onHide={[Function]}
  renderBackdrop={[Function]}
  restoreFocus={true}
  show={true}
>
  <ModalHeader
    bsClass="modal-header"
    closeButton={true}
    closeLabel="Close"
  >
    <ModalTitle
      bsClass="modal-title"
      componentClass="h4"
    >
      <FormattedMessage
        defaultMessage="About uChat"
        id="about.title"
        values={Object {}}
      />
    </ModalTitle>
  </ModalHeader>
  <ModalBody
    bsClass="modal-body"
    componentClass="div"
  >
    <div
      className="about-modal__content"
    >
      <div
        className="about-modal__logo"
      >
        <span
          className="icon"
          dangerouslySetInnerHTML={
            Object {
              "__html": "<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 500 487'><title>uChat</title><path class='uchat-bubble-color' fill='#8ed0bc' d='M433.06,0H63.75A63.8,63.8,0,0,0,0,63.85L2.31,320.7a63.8,63.8,0,0,0,63.75,63.85H377.24l97.59,97.74a14.23,14.23,0,0,0,24.29-10.08V384.55L500,63.85C500,28.59,468.27,0,433.06,0Z'/><path class='uchat-letter-color' fill='#fff' d='M315.2,80.76V213.07c0,44.18-19.49,62.53-65.2,62.53s-65.2-18.35-65.2-62.53V75h-44Q135,75,135,80.76V215.24C135,289.13,181.91,315,250,315s115-25.83,115-99.72V75H321Q315.2,75,315.2,80.76Z'/></svg>",
            }
          }
        />
      </div>
      <div>
        <h3
          className="about-modal__title"
        >
          uChat

          <FormattedMessage
            defaultMessage="Team Edition"
            id="about.teamEditiont0"
            values={Object {}}
          />
        </h3>
        <p
          className="about-modal__subtitle padding-bottom"
        >
          <FormattedMessage
            defaultMessage="All your team communication in one place, instantly searchable and accessible anywhere."
            id="about.teamEditionSt"
            values={Object {}}
          />
        </p>
        <div
          className="form-group less"
        >
          <div>
            <FormattedMessage
              defaultMessage="Version:"
              id="about.version"
              values={Object {}}
            />
            <span
              id="versionString"
            >
               3.6.0  (3.6.2)
            </span>
          </div>
          <div>
            <FormattedMessage
              defaultMessage="Database:"
              id="about.database"
              values={Object {}}
            />
             Postgres
          </div>
        </div>
      </div>
    </div>
    <div
      className="about-modal__footer"
    >
      <div>
        <FormattedMessage
          defaultMessage="Join the uChat community at "
          id="about.teamEditionLearn"
          values={Object {}}
        />
        <a
          href="https://uchat.uberinternal.com/downloads"
          rel="noopener noreferrer"
          target="_blank"
        >
          uchat.uberinternal.com
        </a>
      </div>
      <div
        className="form-group about-modal__copyright"
      >
        <FormattedMessage
          defaultMessage="Copyright 2015 - {currentYear}, Uber Technologies, Inc. All rights reserved""
          id="about.copyright"
          values={
            Object {
              "currentYear": 2017,
            }
          }
        />
      </div>
    </div>
    <div
      className="about-modal__notice form-group padding-top x2"
    >
      <p>
        <FormattedHTMLMessage
          defaultMessage="Mattermost is made possible by the open source software used in our <a href=\\"https://about.mattermost.com/platform-notice-txt/\\" target=\\"_blank\\">platform</a>, <a href=\\"https://about.mattermost.com/desktop-notice-txt/\\" target=\\"_blank\\">desktop</a> and <a href=\\"https://about.mattermost.com/mobile-notice-txt/\\" target=\\"_blank\\">mobile</a> apps."
          id="about.notice"
          values={Object {}}
        />
      </p>
    </div>
    <div
      className="about-modal__hash"
    >
      <p>
        <FormattedMessage
          defaultMessage="Build Hash:"
          id="about.hash"
          values={Object {}}
        />
         
        abcdef1234567890
        <br />
        <FormattedMessage
          defaultMessage="EE Build Hash:"
          id="about.hashee"
          values={Object {}}
        />
         
        0123456789abcdef
      </p>
      <p>
        <FormattedMessage
          defaultMessage="Build Date:"
          id="about.date"
          values={Object {}}
        />
         
        21 January 2017
      </p>
    </div>
  </ModalBody>
</Modal>
`;
